--- a/Pixed/Windows/TransformAlignWindow.axaml
+++ b/Pixed/Windows/TransformAlignWindow.axaml
@@ -5,8 +5,7 @@
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="Pixed.Windows.TransformAlignWindow"
         Title="Align center"
-		MinHeight="150"
-		MinWidth="200"
+		CanResize="False"
 		ShowInTaskbar="False"
 		SizeToContent="WidthAndHeight"
         WindowStartupLocation="CenterOwner"
