--- a/Pixed/Windows/NewProjectWindow.axaml
+++ b/Pixed/Windows/NewProjectWindow.axaml
@@ -5,10 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Pixed.Windows"
         mc:Ignorable="d"
-        Title="New Project" MinWidth="200"
-        MinHeight="230"
+        Title="New Project"
         ShowInTaskbar="False" SizeToContent="WidthAndHeight"
         WindowStartupLocation="CenterOwner"
+		CanResize="False"
         Icon="avares://Pixed.Core/Resources/icon.ico">
   <StackPanel>
     <TextBlock Text="Width:" Margin="10"/>
