--- a/Pixed/Windows/TransformFlipWindow.axaml
+++ b/Pixed/Windows/TransformFlipWindow.axaml
@@ -5,8 +5,7 @@
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="Pixed.Windows.TransformFlipWindow"
         Title="Flip"
-		MinHeight="200" 
-		MinWidth="200"
+		CanResize="False"
 		ShowInTaskbar="False" 
 		SizeToContent="WidthAndHeight"
         WindowStartupLocation="CenterOwner"
