--- a/Pixed/Windows/PaletteWindow.axaml
+++ b/Pixed/Windows/PaletteWindow.axaml
@@ -3,9 +3,11 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Pixed" xmlns:viewmodels="clr-namespace:Pixed.ViewModels" xmlns:controls="clr-namespace:Pixed.Controls"
+        xmlns:local="clr-namespace:Pixed" 
+		xmlns:viewmodels="clr-namespace:Pixed.ViewModels" 
+		xmlns:controls="clr-namespace:Pixed.Controls"
         mc:Ignorable="d"
-        Title="PaletteWindow" Height="600" Width="800" 
+        Title="Palette list" Height="600" Width="800" 
 		Background="{StaticResource BaseBackground}" WindowStartupLocation="CenterOwner"
 		CanResize="False"
         Icon="avares://Pixed.Core/Resources/icon.ico"
