--- a/Pixed/ControlThemes.axaml
+++ b/Pixed/ControlThemes.axaml
@@ -85,6 +85,49 @@
 			<Setter Property="Background" Value="{StaticResource BaseBackgroundHover}"/>
 		</Style>
 	</ControlTheme>
+	<ControlTheme x:Key="ToolRadioCustom" TargetType="RadioButton">
+		<Setter Property="Width" Value="46"/>
+		<Setter Property="Height" Value="46"/>
+		<Setter Property="BorderThickness" Value="3"/>
+		<Setter Property="Background" Value="Transparent"/>
+		<Setter Property="BorderBrush" Value="Transparent"/>
+		<Setter Property="Template">
+			<ControlTemplate TargetType="RadioButton">
+				<Grid>
+					<Grid.ColumnDefinitions>
+						<ColumnDefinition Width="*"/>
+						<ColumnDefinition Width="*"/>
+						<ColumnDefinition Width="*"/>
+					</Grid.ColumnDefinitions>
+					<Grid.RowDefinitions>
+						<RowDefinition Height="*"/>
+						<RowDefinition Height="*"/>
+						<RowDefinition Height="*"/>
+					</Grid.RowDefinitions>
+					<Border BorderThickness="{TemplateBinding BorderThickness}"
+							BorderBrush="{TemplateBinding BorderBrush}"
+							Background="{TemplateBinding Background}" Grid.ColumnSpan="3" Grid.RowSpan="3">
+						<ContentPresenter
+							  Name="PART_ContentPresenter"
+							  Margin="{TemplateBinding Padding}"
+							  HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+							  VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+							  Content="{TemplateBinding Content}"
+							  ContentTemplate="{TemplateBinding ContentTemplate}"
+							  Foreground="{TemplateBinding Foreground}"
+							  RecognizesAccessKey="True" />
+					</Border>
+					<Image Source="avares://Pixed.Core/Resources/Icons/cogs.png" Grid.Row="2" Grid.Column="2"/>
+				</Grid>
+			</ControlTemplate>
+		</Setter>
+		<Style Selector="^:checked">
+			<Setter Property="BorderBrush" Value="{StaticResource Accent}"/>
+		</Style>
+		<Style Selector="^:pointerover">
+			<Setter Property="Background" Value="{StaticResource BaseBackgroundHover}"/>
+		</Style>
+	</ControlTheme>
 	<ControlTheme x:Key="FrameListBoxItem" TargetType="ListBoxItem">
 		<Setter Property="Background" Value="Transparent" />
 		<Setter Property="Margin" Value="0, 4" />
