--- a/Pixed/Windows/PaletteWindow.axaml
+++ b/Pixed/Windows/PaletteWindow.axaml
@@ -25,7 +25,6 @@
                 <Grid>
                   <Grid.RowDefinitions>
                     <RowDefinition Height="20"/>
-                    <RowDefinition Height="20"/>
                     <RowDefinition Height="auto"/>
                   </Grid.RowDefinitions>
                   <Grid.ColumnDefinitions>
@@ -35,17 +34,16 @@
                     <ColumnDefinition Width="40"/>
                   </Grid.ColumnDefinitions>
                   <TextBlock Text="{Binding Name}" FontWeight="Bold" Foreground="White" Grid.ColumnSpan="4"/>
-                  <TextBlock Text="{Binding Path}" Foreground="Gray" Grid.ColumnSpan="4" Grid.Row="1"/>
-                  <Image Source="{Binding BitmapImage}" Grid.Row="2"/>
-                  <Button Grid.Column="1" Grid.Row="2" BorderThickness="0" Background="Transparent" Command="{Binding SelectCommand}" CommandParameter="{Binding Model}">
+                  <Image Source="{Binding BitmapImage}" Grid.Row="1"/>
+                  <Button Grid.Column="1" Grid.Row="1" BorderThickness="0" Background="Transparent" Command="{Binding SelectCommand}" CommandParameter="{Binding Model}">
 
                     <Image Source="avares://Pixed.Core/Resources/Icons/checkmark.png"/>
                   </Button>
-                  <Button Grid.Column="2" Grid.Row="2" BorderThickness="0" Background="Transparent" Command="{Binding RenameCommand}" CommandParameter="{Binding Model}">
+                  <Button Grid.Column="2" Grid.Row="1" BorderThickness="0" Background="Transparent" Command="{Binding RenameCommand}" CommandParameter="{Binding Model}">
 
                     <Image Source="avares://Pixed.Core/Resources/Icons/pencil.png"/>
                   </Button>
-                  <Button Grid.Column="3" Grid.Row="2" BorderThickness="0" Background="Transparent" Command="{Binding RemoveCommand}" CommandParameter="{Binding Model}">
+                  <Button Grid.Column="3" Grid.Row="1" BorderThickness="0" Background="Transparent" Command="{Binding RemoveCommand}" CommandParameter="{Binding Model}">
 
                     <Image Source="avares://Pixed.Core/Resources/Icons/bin.png"/>
                   </Button>
@@ -54,5 +52,6 @@
             </ListBox.ItemTemplate>
           </ListBox>
         </ScrollViewer>
+		<TextBlock Text="No palettes found" Grid.Row="1" Name="noPalettesInfo" VerticalAlignment="Center" HorizontalAlignment="Center"/>
     </Grid>
 </Window>
