--- a/Pixed.Common/Windows/YesNoCancelWindow.axaml
+++ b/Pixed.Common/Windows/YesNoCancelWindow.axaml
@@ -7,7 +7,7 @@
         x:Class="Pixed.Windows.YesNoCancelWindow"
         Title="YesNoCancelWindow" ShowInTaskbar="False" SizeToContent="WidthAndHeight"
         WindowStartupLocation="CenterOwner"
-        Icon="avares://Pixed.Core/Resources/icon.ico"
+        Icon="avares://Pixed.Common/Resources/icon.ico"
 		CanResize="False">
 	<StackPanel Margin="5">
 		<TextBlock Text="{Binding Text, RelativeSource={RelativeSource FindAncestor, AncestorType=local:YesNoCancelWindow}}"/>
