--- a/Pixed.Common/Windows/MainWindow.axaml
+++ b/Pixed.Common/Windows/MainWindow.axaml
@@ -20,7 +20,7 @@
 		ExtendClientAreaToDecorationsHint="True"
         ExtendClientAreaChromeHints="NoChrome"
         ExtendClientAreaTitleBarHeightHint="-1"
-        Icon="avares://Pixed.Core/Resources/icon.ico"
+        Icon="avares://Pixed.Common/Resources/icon.ico"
 		NativeMenu.Menu="{Binding Menu}"
 		DragDrop.AllowDrop="True"
 		x:DataType="viewmodels:MainViewModel">
