--- a/Pixed.Common/Windows/PaletteWindow.axaml
+++ b/Pixed.Common/Windows/PaletteWindow.axaml
@@ -10,7 +10,7 @@
         Title="Palette list" Height="600" Width="800" 
 		Background="{StaticResource BaseBackground}" WindowStartupLocation="CenterOwner"
 		CanResize="False"
-        Icon="avares://Pixed.Core/Resources/icon.ico"
+        Icon="avares://Pixed.Common/Resources/icon.ico"
 		x:DataType="viewmodels:PaletteWindowViewModel">
     <Grid>
         <Grid.RowDefinitions>
@@ -37,15 +37,15 @@
                   <Image Source="{Binding BitmapImage}" Grid.Row="1"/>
                   <Button Grid.Column="1" Grid.Row="1" BorderThickness="0" Background="Transparent" Command="{Binding SelectCommand}" CommandParameter="{Binding Model}">
 
-                    <Image Source="avares://Pixed.Core/Resources/Icons/checkmark.png"/>
+                    <Image Source="avares://Pixed.Common/Resources/Icons/checkmark.png"/>
                   </Button>
                   <Button Grid.Column="2" Grid.Row="1" BorderThickness="0" Background="Transparent" Command="{Binding RenameCommand}" CommandParameter="{Binding Model}">
 
-                    <Image Source="avares://Pixed.Core/Resources/Icons/pencil.png"/>
+                    <Image Source="avares://Pixed.Common/Resources/Icons/pencil.png"/>
                   </Button>
                   <Button Grid.Column="3" Grid.Row="1" BorderThickness="0" Background="Transparent" Command="{Binding RemoveCommand}" CommandParameter="{Binding Model}">
 
-                    <Image Source="avares://Pixed.Core/Resources/Icons/bin.png"/>
+                    <Image Source="avares://Pixed.Common/Resources/Icons/bin.png"/>
                   </Button>
                 </Grid>
               </DataTemplate>
