--- a/Pixed.Common/Windows/Prompt.axaml
+++ b/Pixed.Common/Windows/Prompt.axaml
@@ -9,7 +9,7 @@
         ShowInTaskbar="False" SizeToContent="WidthAndHeight"
         WindowStartupLocation="CenterOwner"
 		CanResize="False"
-        Icon="avares://Pixed.Core/Resources/icon.ico">
+        Icon="avares://Pixed.Common/Resources/icon.ico">
     <StackPanel>
         <TextBlock Text="{Binding Text, RelativeSource={RelativeSource FindAncestor, AncestorType=local:Prompt}}" Margin="10"/>
         <TextBox x:Name="textBox" Margin="10" Text="{Binding DefaultValue, RelativeSource={RelativeSource FindAncestor, AncestorType=local:Prompt}}"/>
