--- a/Pixed.Application/Controls/PaintCanvas.axaml
+++ b/Pixed.Application/Controls/PaintCanvas.axaml
@@ -7,7 +7,7 @@
 			 xmlns:controls="clr-namespace:Pixed.Application.Controls"
 			 xmlns:gestures="clr-namespace:Pixed.Application.Controls.Gestures"
              xmlns:viewmodels="clr-namespace:Pixed.Application.ViewModels"
-			 xmlns:paz="clr-namespace:Avalonia.Controls.PanAndZoom;assembly=Avalonia.Controls.PanAndZoom"
+			 xmlns:zoom="clr-namespace:Pixed.Application.Zoom"
              mc:Ignorable="d"
              d:DesignHeight="450" d:DesignWidth="800"
 			 x:DataType="viewmodels:PaintCanvasViewModel">
@@ -25,7 +25,7 @@
 			<ScrollViewer.GestureRecognizers>
 				<gestures:SwitchablePinchGesture IsEnabled="{Binding IsPinchEnabled}"/>
 			</ScrollViewer.GestureRecognizers>
-			<paz:ZoomBorder Name="zoomBorder" Stretch="None" ZoomSpeed="1.2" ClipToBounds="True">
+			<zoom:ZoomBorder Name="zoomBorder" ZoomSpeed="1.2" ClipToBounds="True">
 				<Grid Name="imageGrid" Width="{Binding GridWidth, Mode=TwoWay}" Height="{Binding GridHeight, Mode=TwoWay}">
 					<Grid.Background>
 						<ImageBrush Source="avares://Pixed.Application/Resources/transparentBackground.png" TileMode="Tile" Stretch="Uniform" AlignmentY="Top" DestinationRect="0 0 32 32"/>
@@ -40,15 +40,9 @@
 									PointerReleased="Border_PointerReleased"
 									PointerWheelChanged="Border_PointerWheelChanged"/>
 				</Grid>
-			</paz:ZoomBorder>
+			</zoom:ZoomBorder>
 		</ScrollViewer>
 		<StackPanel Grid.Row="1" Orientation="Horizontal" Spacing="5" Margin="4">
-			<Button Width="32" Height="32" Command="{Binding ZoomOutCommand}">
-				<Image Source="/Resources/Icons/zoom-out.png"/>
-			</Button>
-			<Button Width="32" Height="32" Command="{Binding ZoomInCommand}">
-				<Image Source="/Resources/Icons/zoom-in.png"/>
-			</Button>
 			<TextBlock Text="Tool size" VerticalAlignment="Center"/>
 			<NumericUpDown Minimum="1" Maximum="32" Value="{Binding ToolSize, Mode=TwoWay}" Width="200"/>
 			<TextBlock Text="{Binding ProjectSizeText}" VerticalAlignment="Center" Margin="10,0,0,0"/>
