--- a/Pixed.Application/Controls/PaintCanvas.axaml
+++ b/Pixed.Application/Controls/PaintCanvas.axaml
@@ -11,40 +11,42 @@
              mc:Ignorable="d"
              d:DesignHeight="450" d:DesignWidth="800"
 			 x:DataType="viewmodels:PaintCanvasViewModel">
-	<Grid>
-		<Grid.RowDefinitions>
-			<RowDefinition Height="*"/>
-			<RowDefinition Height="40"/>
-		</Grid.RowDefinitions>
-		<ScrollViewer
+  <Grid>
+    <Grid.RowDefinitions>
+      <RowDefinition Height="*"/>
+      <RowDefinition Height="40"/>
+    </Grid.RowDefinitions>
+    <ScrollViewer
 		x:Name="scrollView"
 		AllowAutoHide="False"
 			Theme="{StaticResource NoGesturesScrollViewer}">
-			<Grid>
-				<zoom:ZoomBorder Name="zoomBorder" ZoomSpeed="1.2" ClipToBounds="True" GestureZoomEnabled="{Binding GestureZoomEnabled, Mode=TwoWay}" BorderBrush="{StaticResource ButtonBorder}" BorderThickness="2">
-					<Canvas Name="imageGrid" Width="{Binding GridWidth, Mode=TwoWay}" Height="{Binding GridHeight, Mode=TwoWay}">
-						<Canvas.Background>
-							<ImageBrush Source="avares://Pixed.Application/Resources/transparentBackground.png" TileMode="Tile" Stretch="Uniform" AlignmentY="Top" DestinationRect="0 0 32 32"/>
-						</Canvas.Background>
-						<Image Name="image" RenderOptions.BitmapInterpolationMode="None" Source="{Binding AvaloniaImageBitmap}"/>
-						<Image Name="overlay" RenderOptions.BitmapInterpolationMode="None" Source="{Binding AvaloniaOverlayBitmap}"/>
-						<controls:ImageGrid Width="{Binding ScaledGridWidth}" Height="{Binding ScaledGridHeight}" Name="gridCanvas" IsHitTestVisible="False"/>
-						<Border Name="interactionBorder" Background="Transparent"
-										PointerExited="Border_PointerExited"
-										PointerMoved="Border_PointerMoved"
-										PointerPressed="Border_PointerPressed"
-										PointerReleased="Border_PointerReleased"
-										PointerWheelChanged="Border_PointerWheelChanged"/>
-					</Canvas>
-				</zoom:ZoomBorder>
-			</Grid>
-		</ScrollViewer>
-		<StackPanel Grid.Row="1" Orientation="Horizontal" Spacing="5" Margin="4">
-			<TextBlock Text="Tool size" VerticalAlignment="Center"/>
-			<NumericUpDown Minimum="1" Maximum="32" Value="{Binding ToolSize, Mode=TwoWay}" Width="200"/>
-			<TextBlock Text="{Binding ProjectSizeText}" VerticalAlignment="Center" Margin="10,0,0,0"/>
-			<TextBlock Text="{Binding MouseCoordinatesText}" VerticalAlignment="Center"/>
-			<TextBlock Text="{Binding ZoomText}" VerticalAlignment="Center" Margin="0,0,10,0"/>
-		</StackPanel>
-	</Grid>
+      <Grid>
+        <zoom:ZoomBorder Name="zoomBorder" ZoomSpeed="1.2" ClipToBounds="True" GestureZoomEnabled="{Binding GestureZoomEnabled, Mode=TwoWay}" BorderBrush="{StaticResource ButtonBorder}" BorderThickness="2">
+          <Canvas
+            Name="imageGrid"
+            Width="{Binding GridWidth, Mode=TwoWay}"
+            Height="{Binding GridHeight, Mode=TwoWay}"
+            PointerExited="Canvas_PointerExited"
+						PointerMoved="Canvas_PointerMoved"
+						PointerPressed="Canvas_PointerPressed"
+						PointerReleased="Canvas_PointerReleased"
+						PointerWheelChanged="Canvas_PointerWheelChanged">
+            <Canvas.Background>
+              <ImageBrush Source="avares://Pixed.Application/Resources/transparentBackground.png" TileMode="Tile" Stretch="Uniform" AlignmentY="Top" DestinationRect="0 0 32 32"/>
+            </Canvas.Background>
+            <Image Name="image" RenderOptions.BitmapInterpolationMode="None" Source="{Binding AvaloniaImageBitmap}"/>
+            <Image Name="overlay" RenderOptions.BitmapInterpolationMode="None" Source="{Binding AvaloniaOverlayBitmap}"/>
+            <controls:ImageGrid Width="{Binding ScaledGridWidth}" Height="{Binding ScaledGridHeight}" Name="gridCanvas" IsHitTestVisible="False"/>
+          </Canvas>
+        </zoom:ZoomBorder>
+      </Grid>
+    </ScrollViewer>
+    <StackPanel Grid.Row="1" Orientation="Horizontal" Spacing="5" Margin="4">
+      <TextBlock Text="Tool size" VerticalAlignment="Center"/>
+      <NumericUpDown Minimum="1" Maximum="32" Value="{Binding ToolSize, Mode=TwoWay}" Width="200"/>
+      <TextBlock Text="{Binding ProjectSizeText}" VerticalAlignment="Center" Margin="10,0,0,0"/>
+      <TextBlock Text="{Binding MouseCoordinatesText}" VerticalAlignment="Center"/>
+      <TextBlock Text="{Binding ZoomText}" VerticalAlignment="Center" Margin="0,0,10,0"/>
+    </StackPanel>
+  </Grid>
 </UserControl>
