--- a/Pixed.Application/Controls/PaintCanvas.axaml
+++ b/Pixed.Application/Controls/PaintCanvas.axaml
@@ -30,10 +30,9 @@
 						PointerMoved="Canvas_PointerMoved"
 						PointerPressed="Canvas_PointerPressed"
 						PointerReleased="Canvas_PointerReleased"
-						PointerWheelChanged="Canvas_PointerWheelChanged">
-            <Canvas.Background>
-              <ImageBrush Source="avares://Pixed.Application/Resources/transparentBackground.png" TileMode="Tile" Stretch="Uniform" AlignmentY="Top" DestinationRect="0 0 32 32"/>
-            </Canvas.Background>
+						PointerWheelChanged="Canvas_PointerWheelChanged"
+            RenderOptions.BitmapInterpolationMode="None" 
+            Background="{Binding TransparentBrush}">
             <Image Name="image" RenderOptions.BitmapInterpolationMode="None" Source="{Binding AvaloniaImageBitmap}"/>
             <Image Name="overlay" RenderOptions.BitmapInterpolationMode="None" Source="{Binding AvaloniaOverlayBitmap}"/>
             <controls:ImageGrid Width="{Binding ScaledGridWidth}" Height="{Binding ScaledGridHeight}" Name="gridCanvas" IsHitTestVisible="False"/>
