--- a/Pixed.Application/Controls/PaintCanvas.axaml
+++ b/Pixed.Application/Controls/PaintCanvas.axaml
@@ -36,6 +36,7 @@
             <Image Name="image" RenderOptions.BitmapInterpolationMode="None" Source="{Binding AvaloniaImageBitmap}"/>
             <Image Name="overlay" RenderOptions.BitmapInterpolationMode="None" Source="{Binding AvaloniaOverlayBitmap}"/>
             <controls:ImageGrid Width="{Binding ScaledGridWidth}" Height="{Binding ScaledGridHeight}" Name="gridCanvas" IsHitTestVisible="False"/>
+            <controls:SelectionOverlay Width="{Binding ScaledGridWidth}" Height="{Binding ScaledGridHeight}" Name="selectionOverlay" IsHitTestVisible="False"/>
           </Canvas>
         </zoom:ZoomBorder>
       </Grid>
