Move all UI to MainView; NuGet update; Avalonia Shell init

--- a/Pixed.Application/App.axaml
+++ b/Pixed.Application/App.axaml
@@ -21,5 +21,6 @@
     <FluentTheme />
 	  <StyleInclude Source="avares://AvaloniaProgressRing/Styles/ProgressRing.xaml"/>
 	  <StyleInclude Source="/Styles.axaml"/>
+    <StyleInclude Source="avares://AvaloniaInside.Shell/Default.axaml"></StyleInclude>
   </Application.Styles>
 </Application>
